<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="login_label">Connect to twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="action_settings">Settings</string>
    <string name="profile_picture_label">Profile picture</string>
    <string name="tweet_label">Tweet</string>
    <string name="view_profile_label">View Profile</string>
    <string name="whats_happening_label">What\'s happening?</string>
    <string name="tweet_posted_successfully">Tweet posted successfully!</string>
    <string name="no_internet_connection_label">No internet connection!</string>
    <string name="ok_label">OK</string>
    <string name="api_failure_label">Failed to call API!</string>
    <string name="title_activity_tweet_details">Tweet</string>
    <string name="hello_world">Hello world!</string>
    <string name="retweets_label">RETWEETS</string>
    <string name="favorites_label">FAVORITES</string>
    <string name="tweets_label">TWEETS</string>
    <string name="followers_label">FOLLOWERS</string>
    <string name="following_label">FOLLOWING</string>
    <string name="retweet_label">Retweet</string>
    <string name="reply_label">Reply</string>
    <string name="favorite_label">Favorite</string>
    <string name="title_activity_profile">Profile</string>

</resources>